feat: Update UnifiedBankExtractor and configuration for improved balance correction and extraction process

--- a/config/bank_prompts.yaml
+++ b/config/bank_prompts.yaml
@@ -12,6 +12,10 @@ prompts:
     template: |
       Look at the transaction table in this bank statement image.
 
+      IMPORTANT STRUCTURAL NOTE:
+      Some bank statements show dates as section headings with multiple transactions underneath.
+      If you see this structure, remember that each transaction needs its explicit date in the final output.
+
       What are the exact column header names used in the transaction table?
 
       List each column header exactly as it appears, in order from left to right.
