--- a/config/bank_prompts.yaml
+++ b/config/bank_prompts.yaml
@@ -71,6 +71,32 @@ prompts:
       4. PRESERVE the sign of amounts (negative values are withdrawals)
       5. Do NOT skip any transactions
 
+  # Turn 1: Debit-Credit extraction (2-turn strategy for separate Debit/Credit columns)
+  turn1_debit_credit_extraction:
+    name: "Debit-Credit Extraction"
+    description: "Extract transactions with separate debit and credit columns (no balance)"
+    # Placeholders: {debit_col}, {credit_col}, {desc_col}
+    template: |
+      List all transactions from this bank statement, including:
+      - Date
+      - {desc_col}
+      - {debit_col} Amount or "NOT_FOUND"
+      - {credit_col} Amount or "NOT_FOUND"
+
+      Format each entry like this:
+      1. **[Date]**
+         - {desc_col}: [description text]
+         - {debit_col}: [amount or NOT_FOUND]
+         - {credit_col}: [amount or NOT_FOUND]
+
+      CRITICAL RULES:
+      1. List EVERY transaction in order from top to bottom
+      2. EVERY entry has a date, either on the same row, or above
+      3. Include the FULL description text, not abbreviated
+      4. If amount is in {debit_col} column, put it there and use NOT_FOUND for {credit_col}
+      5. If amount is in {credit_col} column, put it there and use NOT_FOUND for {debit_col}
+      6. Do NOT skip any transactions
+
   # Turn 0.5: Format classification (3-turn strategy)
   turn0_5_format_classification:
     name: "Date Format Classification"
