--- a/config/bank_prompts.yaml
+++ b/config/bank_prompts.yaml
@@ -31,7 +31,7 @@ prompts:
 
       Format each balance entry like this:
       1. **[Date]**
-         - {desc_col}: [description text]
+         - {desc_col}: [ALL rows of text for this transaction]
          - {debit_col}: [amount or NOT_FOUND]
          - {credit_col}: [amount or NOT_FOUND]
          - {balance_col}: [balance amount]
@@ -39,7 +39,7 @@ prompts:
       CRITICAL RULES:
       1. List EVERY balance entry in order from top to bottom
       2. EVERY balance entry has a date, either on the same row, or above
-      3. Include the FULL description text, not abbreviated
+      3. Include the FULL {desc_col} text - capture ALL rows that belong to this transaction, not abbreviated
       4. If amount is in {debit_col} column, put it there and use NOT_FOUND for {credit_col}
       5. If amount is in {credit_col} column, put it there and use NOT_FOUND for {debit_col}
       6. Do NOT skip any transactions
