--- a/config/bank_prompts.yaml
+++ b/config/bank_prompts.yaml
@@ -151,3 +151,30 @@ prompts:
       - Include ALL transactions
       - Empty amount cells should be blank
 
+  # Schema-based fallback extraction (when column detection fails)
+  # Used when header detection returns garbage (days of week, ATM locations, etc.)
+  schema_fallback_extraction:
+    name: "Schema-Based Bank Statement Extraction"
+    description: "Direct extraction using schema fields when column detection fails"
+    template: |
+      Extract ALL data from this bank statement image. Respond in exact format below with actual values or NOT_FOUND.
+
+      DOCUMENT_TYPE: BANK_STATEMENT
+      STATEMENT_DATE_RANGE: NOT_FOUND
+      TRANSACTION_DATES: NOT_FOUND
+      LINE_ITEM_DESCRIPTIONS: NOT_FOUND
+      TRANSACTION_AMOUNTS_PAID: NOT_FOUND
+
+      Instructions:
+      - STATEMENT_DATE_RANGE: Find the statement period (e.g., "01/01/2024 - 31/01/2024")
+      - TRANSACTION_DATES: List ALL transaction dates separated by " | " (e.g., "01/01/2024 | 02/01/2024 | 03/01/2024")
+      - LINE_ITEM_DESCRIPTIONS: List ALL transaction descriptions separated by " | "
+      - TRANSACTION_AMOUNTS_PAID: List ALL debit/withdrawal amounts separated by " | " (use NOT_FOUND for credits)
+
+      CRITICAL RULES:
+      1. Extract EVERY transaction from the statement
+      2. Keep items in the same order across all fields (date 1 matches description 1 matches amount 1)
+      3. Use " | " as separator between items
+      4. Include $ symbol for amounts
+      5. Replace NOT_FOUND with actual values
+
