--- a/environment_ivl35.yml
+++ b/environment_ivl35.yml
@@ -20,7 +20,7 @@ dependencies:
 
   # Pip dependencies
   - pip:
-    - transformers>=4.52.1
+    - transformers>=4.52.1,<5.0.0  # InternVL3.5 custom code incompatible with transformers 5.0 meta device init
     - pillow>=10.0.0
     - timm>=0.9.0
     - einops>=0.6.0
